--- a/src/templates/joomladach2023/assets/scss/base/_typo.scss
+++ b/src/templates/joomladach2023/assets/scss/base/_typo.scss
@@ -3,22 +3,112 @@
   html {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+    color: var(--jdach-darkblue);
   }
+
+  // Headings
+
+  h1,.h1 {
+    font-size: var(--size-xxl);
+    font-weight: 900;
+    line-height: 1.13;
+  }
+  h2,.h2 {
+    font-size: var(--size-xl);
+    font-weight: 900;
+    line-height: 1.2;
+  }
+  h3,.h3 {
+    font-size: var(--size-md);
+    font-weight: 900;
+    line-height: 1.25;
+  }
+  h4, .h4 {
+    font-weight: 900;
+    line-height: 1.25;
+  }
+  h5, .h5 {
+    font-size: var(--size-sm);
+    font-weight: 900;
+    line-height: 1.25;
+  }
+  h6, .h6 {
+    font-size: var(--size-sm);
+    font-weight: 600;
+    line-height: 1.25;
+  }
+
   // Utilities
 
-  $fs: xxs, xs, df, md, lg, xl, xxl, xxxl;
+  $colors: ('lightblue': #5091CD, 'darkblue': #25304F, 'yellow': #FEC34D, 'green': #89C764, 'red': #F44321, 'white': #fff);
+  $fws: 100, 200, 300, 400, 500, 600, 700, 800, 900;
+  $fs: sm, df, md, lg, xl, xxl;
 
+
+  // Font-Size
   @each $size in $fs {
     .txt-#{$size} {
       font-size: var(--size-#{$size});
     }
   }
-
-  $fws: 100, 200, 300, 400, 500, 600, 700, 800, 900;
-
+  // Font-Weight
   @each $fw in $fws {
     .txt-#{$fw} {
       font-weight: $fw;
     }
   }
+  // Text-Color
+  @each $color, $value in $colors {
+    .txt-#{$color} {
+      color: $value;
+    }
+  }
+  // Background-Color
+  @each $color, $value in $colors {
+    .bg-#{$color} {
+      background-color: $value;
+    }
+  }
+}
+@include critical(false) {
+  /* source-sans-pro-regular - latin */
+  @font-face {
+    font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+    font-family: 'Source Sans Pro';
+    font-style: normal;
+    font-weight: 400;
+    src: url('../font/source-sans-pro-v21-latin-regular.woff2') format('woff2'), /* Chrome 36+, Opera 23+, Firefox 39+ */
+    url('../font/source-sans-pro-v21-latin-regular.woff') format('woff'); /* Chrome 5+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+  }
+
+  /* source-sans-pro-600 - latin */
+  @font-face {
+    font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+    font-family: 'Source Sans Pro';
+    font-style: normal;
+    font-weight: 600;
+    src: url('../font/source-sans-pro-v21-latin-600.woff2') format('woff2'), /* Chrome 36+, Opera 23+, Firefox 39+ */
+    url('../font/source-sans-pro-v21-latin-600.woff') format('woff'); /* Chrome 5+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+  }
+
+  /* source-sans-pro-700 - latin */
+  @font-face {
+    font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+    font-family: 'Source Sans Pro';
+    font-style: normal;
+    font-weight: 700;
+    src: url('../font/source-sans-pro-v21-latin-700.woff2') format('woff2'), /* Chrome 36+, Opera 23+, Firefox 39+ */
+    url('../font/source-sans-pro-v21-latin-700.woff') format('woff'); /* Chrome 5+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+  }
+
+  /* source-sans-pro-900 - latin */
+  @font-face {
+    font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+    font-family: 'Source Sans Pro';
+    font-style: normal;
+    font-weight: 900;
+    src: url('../font/source-sans-pro-v21-latin-900.woff2') format('woff2'), /* Chrome 36+, Opera 23+, Firefox 39+ */
+    url('../font/source-sans-pro-v21-latin-900.woff') format('woff'); /* Chrome 5+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+  }
+
 }
