--- a/src/templates/joomladach2023/assets/scss/base/_layout.scss
+++ b/src/templates/joomladach2023/assets/scss/base/_layout.scss
@@ -15,5 +15,17 @@
       overflow-x: clip;
     }
   }
-
+  // Utilities
+  .mt-0 {
+    margin-top: 0;
+  }
+  .mb-0 {
+    margin-bottom: 0;
+  }
+  .mr-0 {
+    margin-right: 0;
+  }
+  .ml-0 {
+    margin-left: 0;
+  }
 }
