--- a/src/templates/joomladach2023/assets/scss/variables.scss
+++ b/src/templates/joomladach2023/assets/scss/variables.scss
@@ -20,6 +20,7 @@ $screen-xxl-min: 1680px;
 
 :root {
   --jdach-darkblue: #25304F;
+  --jdach-midblue: #2D395A;
   --jdach-lightblue: #5091CD;
   --jdach-yellow: #FEC34D;
   --jdach-green: #89C764;
