--- a/src/templates/joomladach2023/assets/scss/screen.scss
+++ b/src/templates/joomladach2023/assets/scss/screen.scss
@@ -9,3 +9,6 @@
 @import 'base/layout';
 
 @import 'components/button';
+@import 'components/footer';
+@import 'components/footer-mainnav';
+@import 'components/footer-bottomnav';
