--- a/src/templates/joomladach2023/assets/scss/screen.scss
+++ b/src/templates/joomladach2023/assets/scss/screen.scss
@@ -12,4 +12,4 @@
 @import 'components/footer';
 @import 'components/footer-mainnav';
 @import 'components/footer-bottomnav';
-@import 'components/faq-accordion';
+@import 'components/accordion';
