update global font-size

--- a/src/templates/joomladach2023/assets/scss/base/_typo.scss
+++ b/src/templates/joomladach2023/assets/scss/base/_typo.scss
@@ -5,6 +5,7 @@
     -moz-osx-font-smoothing: grayscale;
     color: var(--jdach-darkblue);
     font-family: var(--jdach-basefont);
+    font-size: 21px;
   }
 
   // Headings
