--- a/src/templates/joomladach2023/assets/scss/components/_accordion.scss
+++ b/src/templates/joomladach2023/assets/scss/components/_accordion.scss
@@ -4,40 +4,49 @@
     padding: 0;
     &__item {
       &-trigger {
-        padding: var(--spaceunit);
-        border:0;
+        padding: var(--space-base) 0;
         background: none;
-        font-weight: bold;
-        cursor: pointer;
         color: var(--jdach-darkblue);
+        border: 0px;
         border-bottom: 2px solid var(--jdach-darkblue);
         width: 100%;
         display: flex;
         justify-content: space-between;
-        /* Icon */
-        &:hover {
-          background: var(--jdach-darkblue);
-          color: #fff;
+        font-size: var(--size-md);
+        font-weight: 600;
+        transition: .25s ease-in-out;
+        &:hover,
+        &[aria-expanded="true"] {
+          border-bottom: 2px solid var(--jdach-yellow);
+          color: var(--jdach-midblue);
         }
+        /* Icon */
         &-icon {
           width: 0.75em;
           height: 1.1em;
           transition: .25s ease-in-out;
-        }
-        &[aria-expanded="true"] .accordion__trigger-icon {
-          transform: rotate(-180deg);
+          [aria-expanded="true"] & {
+            transform: rotate(-180deg);
+          }
         }
       }
       &-panel {
         overflow: hidden;
         max-height: 0;
         transition: .3s ease-in-out;
+        > *:first-child {
+          margin-top: 0;
+        }
+        > *:last-child {
+          margin-bottom: 0;
+        }
         > * {
           opacity: 0;
           transition: .3s ease-in-out;
         }
         &.open {
           max-height: 800px;
+          padding: var(--space-base) 0;
           > * {
             opacity: 1;
           }
