--- a/src/templates/joomladach2023/assets/scss/screen.scss
+++ b/src/templates/joomladach2023/assets/scss/screen.scss
@@ -12,3 +12,9 @@
 @import 'components/footer';
 @import 'components/footer-mainnav';
 @import 'components/footer-bottomnav';
+@import 'components/header';
+@import 'components/offcanvas';
+@import 'components/navtoggler';
+@import 'components/secnav';
+@import 'components/mainnav';
+@import 'components/modfinderheaderbar';
