--- a/src/templates/joomladach2023/assets/scss/components/_accordion.scss
+++ b/src/templates/joomladach2023/assets/scss/components/_accordion.scss
@@ -20,7 +20,7 @@
           border-bottom: 2px solid var(--jdach-yellow);
           color: var(--jdach-midblue);
         }
-        &[aria-expanded="true"] & {
+        &[aria-expanded="true"] {
           .accordion__item-trigger-icon {
             transform: rotate(-180deg);
           }
