add new scss-files

--- a/src/templates/joomladach2023/assets/scss/screen.scss
+++ b/src/templates/joomladach2023/assets/scss/screen.scss
@@ -19,3 +19,8 @@
 @import 'components/secnav';
 @import 'components/mainnav';
 @import 'components/modfinderheaderbar';
+@import 'components/arrowlink';
+@import 'components/pagination';
+
+@import 'views/com-content-article';
+@import 'views/com-content-category-blog';
