add spacing to top for footer

--- a/src/templates/joomladach2023/assets/scss/components/_footer.scss
+++ b/src/templates/joomladach2023/assets/scss/components/_footer.scss
@@ -1,6 +1,10 @@
 @include critical(false) {
   .footer {
     color: #fff;
+    margin-top: var(--space-xlarge);
+    @include md {
+      margin-top: var(--space-xxlarge);
+    }
     a {
       color: #fff;
     }
