add jdachhero module and styles

--- a/src/templates/joomladach2023/assets/scss/screen.scss
+++ b/src/templates/joomladach2023/assets/scss/screen.scss
@@ -21,6 +21,7 @@
 @import 'components/modfinderheaderbar';
 @import 'components/arrowlink';
 @import 'components/pagination';
+@import 'components/jdachhero';
 
 @import 'views/com-content-article';
 @import 'views/com-content-category-blog';
