--- a/src/templates/joomladach2023/assets/scss/components/_button.scss
+++ b/src/templates/joomladach2023/assets/scss/components/_button.scss
@@ -70,7 +70,8 @@
     --bordercolor: var(--jdach-darkblue);
     --borderhovercolor: var(--jdach-darkblue);
     .bg-darkblue &,
-    .bg-midblue & {
+    .bg-midblue &,
+    .bg-red & {
       --bgcolor: transparent;
       --bghovercolor: #fff;
       --color: #fff;
