--- a/src/templates/joomladach2023/assets/scss/screen.scss
+++ b/src/templates/joomladach2023/assets/scss/screen.scss
@@ -23,6 +23,7 @@
 @import 'components/pagination';
 @import 'components/jdachhero';
 @import 'components/tabs';
+@import 'components/imagetext';
 
 @import 'views/com-content-article';
 @import 'views/com-content-category-blog';
