add mod_testimonial - add minor fixes for alternat

--- a/src/templates/joomladach2023/assets/scss/screen.scss
+++ b/src/templates/joomladach2023/assets/scss/screen.scss
@@ -25,6 +25,7 @@
 @import 'components/tabs';
 @import 'components/imagetext';
 @import 'components/mod-articles-latest-alternate';
+@import 'components/testimonial';
 
 @import 'views/com-content-article';
 @import 'views/com-content-category-blog';
