--- a/src/templates/joomladach2023/assets/scss/components/_mod-articles-latest-alternate.scss
+++ b/src/templates/joomladach2023/assets/scss/components/_mod-articles-latest-alternate.scss
@@ -1,16 +1,16 @@
 @include critical(true) {
   .mod-articles-latest-alternate {
     display: grid;
-    gap: var(--space-xxlarge);
+    grid-gap: var(--space-xxlarge);
     counter-reset: section;
     @include md {
       &:not(.mod-articles-latest-alternate--news) {
-        gap: var(--space-xxxlarge);
+        grid-gap: var(--space-xxxlarge);
       }
     }
     &__item {
+      display: grid;
       @include md {
-        display: grid;
         grid-template-columns: 1fr 2fr;
         gap: var(--space-xxxlarge);
         align-items: center;
@@ -30,8 +30,15 @@
       &-image {
         order: 1;
         display: block;
-        width: 100%;
+        width: 50%;
         height: auto;
+        margin: 0 auto var(--space-xxlarge) auto;
+        order: 1;
+        @include md {
+          width: 100%;
+          margin: 0;
+          order: initial;
+        }
       }
       &-content {
         padding: var(--space-large);
@@ -60,7 +67,10 @@
     &--counter {
       .mod-articles-latest-alternate__item-content {
         position: relative;
-        border-radius: 0 16px 16px 16px;
+        border-radius: 16px;
+        @include md {
+          border-radius: 0 16px 16px 16px;
+        }
         @include lg {
           border-radius: 0 32px 32px 32px;
         }
@@ -76,12 +86,15 @@
           font-weight: 700;
           content: counter(section);
           position: absolute;
-          left: 0;
+          left: 50%;
           top: 0;
           transform: translate(-50%, - 50%);
           z-index: 2;
           border-radius: 50%;
           counter-increment: section;
+          @include md {
+            left: 0;
+          }
           @include lg {
             width: 50px;
             height: 50px;
