add styles for mod_boxes and cards

--- a/src/templates/joomladach2023/assets/scss/base/_typo.scss
+++ b/src/templates/joomladach2023/assets/scss/base/_typo.scss
@@ -96,6 +96,9 @@
     .bg-#{$name} {
       background-color: #{$value};
       color: #{$invertedvalue};
+      .card__link {
+        color: #{$invertedvalue};
+      }
     }
   }
 }
