--- a/src/templates/joomladach2023/assets/scss/screen.scss
+++ b/src/templates/joomladach2023/assets/scss/screen.scss
@@ -26,6 +26,8 @@
 @import 'components/imagetext';
 @import 'components/mod-articles-latest-alternate';
 @import 'components/testimonial';
+@import 'components/card';
+@import 'components/downloadlink';
 
 @import 'views/com-content-article';
 @import 'views/com-content-category-blog';
