--- a/src/templates/joomladach2023/assets/scss/components/_footer-mainnav.scss
+++ b/src/templates/joomladach2023/assets/scss/components/_footer-mainnav.scss
@@ -19,6 +19,11 @@
           align-items: center;
           text-decoration: none;
           font-weight: 600;
+          opacity: .8;
+          transition: .25s ease-in-out;
+          &:hover {
+            opacity: 1;
+          }
           &:before {
             height: 14px;
             width: 29px;
