--- a/src/templates/joomladach2023/assets/scss/components/_button.scss
+++ b/src/templates/joomladach2023/assets/scss/components/_button.scss
@@ -80,6 +80,10 @@
       --borderhovercolor: #fff;
     }
   }
+  .btn-sm {
+    padding: var(--space-smaller) var(--space-base);
+    font-size: calc(var(--size-sm) * .8);
+  }
   // Button-Group
   .btngrp {
     display: flex;
