--- a/src/templates/joomladach2023/assets/scss/views/_com-content-category-blog.scss
+++ b/src/templates/joomladach2023/assets/scss/views/_com-content-category-blog.scss
@@ -56,26 +56,43 @@
       @include lg {
         grid-gap: var(--space-xxlarge);
       }
-      .page-header {
-        h2 {
-          font-size: var(--size-lg);
-          margin: var(--space-smaller) 0 var(--space-small);
-          a {
-            text-decoration: none;
-            color: var(--jdach-darkblue);
-            transition: .25s ease-in-out;
-            &:hover,
-            &:focus {
-              color: var(--jdach-lightblue);
+      .item-content {
+        .page-header {
+          h2 {
+            font-size: var(--size-lg);
+            margin: var(--space-smaller) 0 var(--space-small);
+            a {
+              text-decoration: none;
+              color: var(--jdach-darkblue);
+              transition: .25s ease-in-out;
+              &:hover,
+              &:focus {
+                color: var(--jdach-lightblue);
+              }
             }
           }
         }
-      }
-      .readmore {
-        color: var(--jdach-darkblue);
-        &:hover,
-        &:focus {
-          color: var(--jdach-lightblue);
+        .tags {
+          list-style: none;
+          display: flex;
+          flex-wrap: wrap;
+          padding: 0;
+          margin: 0;
+          gap: var(--space-smaller);
+        }
+        .article-info {
+          margin: 0;
+          font-size: var(--size-sm);
+          dd {
+            margin: 0;
+          }
+        }
+        .readmore {
+          color: var(--jdach-darkblue);
+          &:hover,
+          &:focus {
+            color: var(--jdach-lightblue);
+          }
         }
       }
       .item-imagecontainer {
