fix tag styling

--- a/src/templates/joomladach2023/assets/scss/views/_com-content-category-blog.scss
+++ b/src/templates/joomladach2023/assets/scss/views/_com-content-category-blog.scss
@@ -79,6 +79,14 @@
           padding: 0;
           margin: 0;
           gap: var(--space-smaller);
+          .btn {
+            border-radius: 8px;
+            border: 0;
+            padding: calc(var(--space-smaller) * .8) var(--space-smaller);
+            line-height: 1;
+            background: #EBEFF2;
+            color: var(--jdach-darkblue);
+          }
         }
         .article-info {
           margin: 0;
@@ -89,6 +97,7 @@
         }
         .readmore {
           color: var(--jdach-darkblue);
+          margin-top: var(--space-base);
           &:hover,
           &:focus {
             color: var(--jdach-lightblue);
