--- a/src/templates/joomladach2023/assets/scss/views/_com-content-category-blog.scss
+++ b/src/templates/joomladach2023/assets/scss/views/_com-content-category-blog.scss
@@ -84,7 +84,7 @@
             border: 0;
             padding: calc(var(--space-smaller) * .8) var(--space-smaller);
             line-height: 1;
-            background: #EBEFF2;
+            background: var(--jdach-muted);
             color: var(--jdach-darkblue);
           }
         }
