add styles and views for serviceproviderdirectory

--- a/src/templates/joomladach2023/assets/scss/screen.scss
+++ b/src/templates/joomladach2023/assets/scss/screen.scss
@@ -32,3 +32,5 @@
 @import 'views/com-content-article';
 @import 'views/com-content-category-blog';
 @import 'views/com-finder';
+@import 'views/com-content-serviceproviderdirectory';
+@import 'views/com-content-article-serviceproviderpage';
