add fix for tags

--- a/src/templates/joomladach2023/assets/scss/screen.scss
+++ b/src/templates/joomladach2023/assets/scss/screen.scss
@@ -28,6 +28,7 @@
 @import 'components/testimonial';
 @import 'components/card';
 @import 'components/downloadlink';
+@import 'components/tags';
 
 @import 'views/com-content-article';
 @import 'views/com-content-category-blog';
