--- a/src/templates/joomladach2023/assets/scss/screen.scss
+++ b/src/templates/joomladach2023/assets/scss/screen.scss
@@ -35,3 +35,4 @@
 @import 'views/com-finder';
 @import 'views/com-content-serviceproviderdirectory';
 @import 'views/com-content-article-serviceproviderpage';
+@import 'views/com-tags';
