add styles and override for #51

--- a/src/templates/joomladach2023/assets/scss/screen.scss
+++ b/src/templates/joomladach2023/assets/scss/screen.scss
@@ -29,6 +29,7 @@
 @import 'components/card';
 @import 'components/downloadlink';
 @import 'components/tags';
+@import 'components/article-info';
 
 @import 'views/com-content-article';
 @import 'views/com-content-category-blog';
