--- a/src/templates/joomladach2023/assets/scss/views/_com-content-article.scss
+++ b/src/templates/joomladach2023/assets/scss/views/_com-content-article.scss
@@ -28,11 +28,6 @@
         width: calc(100% + 2 * var(--space-base));
         transform: translateX(calc(var(--space-base) * -1));
       }
-      .page-header {
-        h1 {
-          margin-top: 0;
-        }
-      }
       @include lg {
         border-radius: 32px;
         padding: var(--space-xxxlarge) var(--space-xlarge);
@@ -41,6 +36,14 @@
       @include rwd(1340) {
         padding: calc((var(--contentcontainerwidth) - var(--maxcontentwidth)) / 2);
         margin-top: calc((var(--contentcontainerwidth) - var(--maxcontentwidth)) / -2);
+      }
+      .page-header {
+        h1 {
+          margin: 0 0 var(--space-large) 0;
+        }
+      }
+      .article-info {
+        margin: 0 0 var(--space-large) 0;
       }
     }
   }
