--- a/src/templates/joomladach2023/assets/scss/views/_com-content-category-blog.scss
+++ b/src/templates/joomladach2023/assets/scss/views/_com-content-category-blog.scss
@@ -73,7 +73,7 @@
           }
         }
         .article-info {
-          margin: 0;
+          margin: 0 0 var(--space-small) 0;
           font-size: var(--size-sm);
           dd {
             margin: 0;
