remove footer margin based on pageclass

--- a/src/templates/joomladach2023/assets/scss/components/_footer.scss
+++ b/src/templates/joomladach2023/assets/scss/components/_footer.scss
@@ -2,6 +2,9 @@
   .footer {
     color: #fff;
     margin-top: var(--space-xlarge);
+    .removefootermargin & {
+      margin-top: 0;
+    }
     @include md {
       margin-top: var(--space-xxlarge);
     }
