--- a/src/templates/joomladach2023/assets/scss/views/_com-content-category-blog.scss
+++ b/src/templates/joomladach2023/assets/scss/views/_com-content-category-blog.scss
@@ -57,6 +57,11 @@
         grid-gap: var(--space-xxlarge);
       }
       .item-content {
+        &--fullwidth {
+          @include md {
+            grid-column: 1 / span 2
+          }
+        }
         .page-header {
           h2 {
             font-size: var(--size-lg);
@@ -93,18 +98,13 @@
           margin: 0;
           overflow: hidden;
           transition: .25s ease-in-out;
-          aspect-ratio: 1 / 1;
-          @include md {
-            width: 100%;
-            height: 100%;
-            aspect-ratio: initial;
-          }
           img {
             display: block;
             width: 100%;
             height: 100%;
             object-fit: cover;
             transition: .25s ease-in-out;
+            aspect-ratio: 870 / 400;
           }
         }
         &:hover,
@@ -117,6 +117,9 @@
           }
         }
       }
+    }
+    &__counter {
+      text-align: center;
     }
     &__pagination {
       margin-top: var(--space-xxlarge);
