--- a/src/templates/joomladach2023/assets/scss/screen.scss
+++ b/src/templates/joomladach2023/assets/scss/screen.scss
@@ -25,6 +25,7 @@
 @import 'components/tabs';
 @import 'components/imagetext';
 @import 'components/mod-articles-latest-alternate';
+@import 'components/mod-articles-latest-columns';
 @import 'components/testimonial';
 @import 'components/card';
 @import 'components/downloadlink';
