add fix for footernav
ja, ich weiss gehört hier nicht her

--- a/src/templates/joomladach2023/assets/scss/components/_footer-bottomnav.scss
+++ b/src/templates/joomladach2023/assets/scss/components/_footer-bottomnav.scss
@@ -5,6 +5,7 @@
       align-items: baseline;
       gap: var(--space-base);
       justify-content: flex-end;
+      flex-wrap: wrap;
       a {
         text-decoration: none;
         opacity: .8;
