fix offcanvas menu overflow

--- a/src/templates/joomladach2023/assets/scss/components/_offcanvas.scss
+++ b/src/templates/joomladach2023/assets/scss/components/_offcanvas.scss
@@ -35,6 +35,7 @@
           max-height: 0;
           padding: 0;
           margin: 0;
+          overflow: hidden;
           background: var(--jdach-midblue);
           position: relative;
           &:before,
