added styles for management workflow view

--- a/src/templates/joomladach2023/assets/scss/screen.scss
+++ b/src/templates/joomladach2023/assets/scss/screen.scss
@@ -38,3 +38,5 @@
 @import 'views/com-content-serviceproviderdirectory';
 @import 'views/com-content-article-serviceproviderpage';
 @import 'views/com-tags';
+@import 'views/com-users';
+@import 'views/com-content-edit';
