--- a/src/templates/joomladach2023/assets/scss/base/_typo.scss
+++ b/src/templates/joomladach2023/assets/scss/base/_typo.scss
@@ -79,6 +79,7 @@
 
   // Input
   input[type="text"],
+  input[type="password"],
   input[type="search"],
   input[type="date"],
   input[type="number"],
