--- a/src/templates/joomladach2023/assets/scss/views/_com-content-serviceproviderdirectory.scss
+++ b/src/templates/joomladach2023/assets/scss/views/_com-content-serviceproviderdirectory.scss
@@ -29,7 +29,7 @@
             max-height: 100px;
             width: auto;
             height: auto;
-            object-fit: initial;
+            object-fit: contain;
             display: block;
           }
         }
