--- a/src/templates/joomladach2023/assets/scss/screen.scss
+++ b/src/templates/joomladach2023/assets/scss/screen.scss
@@ -37,6 +37,8 @@
 @import 'views/com-finder';
 @import 'views/com-content-serviceproviderdirectory';
 @import 'views/com-content-article-serviceproviderpage';
+@import 'views/com-content-article-youtube';
+@import 'views/com-content-videoblog';
 @import 'views/com-tags';
 @import 'views/com-users';
 @import 'views/com-content-edit';
