--- a/src/templates/joomladach2023/assets/scss/components/_offcanvas.scss
+++ b/src/templates/joomladach2023/assets/scss/components/_offcanvas.scss
@@ -14,6 +14,7 @@
       display: flex;
       flex-direction: column;
       gap: var(--space-xlarge);
+      overflow-y: scroll;
       // General
       a, span {
         color: #fff;
@@ -73,6 +74,7 @@
           }
           > ul {
             max-height: 100vh;
+            padding: var(--space-small);
             > * {
               opacity: 1;
               transform: translateY(0px);
