--- a/src/templates/joomladach2023/assets/scss/views/_com-content-serviceproviderdirectory.scss
+++ b/src/templates/joomladach2023/assets/scss/views/_com-content-serviceproviderdirectory.scss
@@ -17,21 +17,34 @@
         padding: var(--space-large);
         margin-bottom: var(--space-large);
         aspect-ratio: 3 / 1;
+        background: var(--jdach-green);
+        border-radius: 8px;
         &:hover {
           .item-image img {
             transform: scale(1);
           }
         }
         .item-image {
-          width: auto;
+          width: 50%;
           height: auto;
+          aspect-ratio: 1 / 1;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          background: #fff;
+          border-radius: 100vh;
+          object-fit: contain;
           img {
-            max-width: 100%;
-            max-height: 100px;
-            width: auto;
+            display: block;
+            width: 60%;
             height: auto;
             object-fit: contain;
-            display: block;
+            aspect-ratio: initial;
+
+          }
+          &.placeholder img {
+            filter: grayscale(1);
+            width: 50%
           }
         }
       }
