add styles for non-cropped blogview

--- a/src/templates/joomladach2023/assets/scss/screen.scss
+++ b/src/templates/joomladach2023/assets/scss/screen.scss
@@ -38,6 +38,7 @@
 @import 'views/com-content-serviceproviderdirectory';
 @import 'views/com-content-article-serviceproviderpage';
 @import 'views/com-content-article-youtube';
+@import 'views/com-content-article-interviewpage';
 @import 'views/com-content-videoblog';
 @import 'views/com-tags';
 @import 'views/com-users';
