--- a/src/templates/joomladach2023/assets/scss/views/_com-content-category-blog.scss
+++ b/src/templates/joomladach2023/assets/scss/views/_com-content-category-blog.scss
@@ -130,5 +130,10 @@
     &__pagination {
       margin-top: var(--space-xxlarge);
     }
+    &.blog--croppimages {
+      .item-imagecontainer .item-image img {
+        aspect-ratio: initial;
+      }
+    }
   }
 }
