--- a/src/templates/joomladach2023/assets/scss/views/_com-users.scss
+++ b/src/templates/joomladach2023/assets/scss/views/_com-users.scss
@@ -1,5 +1,5 @@
 @include critical(false) {
-  .com-users-login, .com-users-registration, .com-users-profile__edit {
+  .com-users-login, .com-users-registration, .com-users-profile__edit, .com-users-reset, .com-users-remind {
     padding: var(--space-large) 0;
 
     .control-group {
