Fix button spacing on mobile #82

--- a/src/templates/joomladach2023/assets/scss/views/_com-content-serviceproviderdirectory.scss
+++ b/src/templates/joomladach2023/assets/scss/views/_com-content-serviceproviderdirectory.scss
@@ -120,6 +120,10 @@
         }
       }
 
+      > .btn {
+        margin-bottom: var(--space-small);
+      }
+
 
       joomla-field-fancy-select {
         > .choices {
