--- a/src/templates/joomladach2023/assets/scss/components/_pagination.scss
+++ b/src/templates/joomladach2023/assets/scss/components/_pagination.scss
@@ -6,9 +6,18 @@
       display: flex;
       justify-content: center;
       gap: var(--space-smaller);
+      flex-wrap: wrap;
       .page-item {
-        width: 60px;
-        height: 60px;
+        width: 30px;
+        height: 30px;
+        @include md {
+          width: 45px;
+          height: 45px;
+        }
+        @include lg {
+          width: 60px;
+          height: 60px;
+        }
         transition: .25s ease-in-out;
         border-radius: 50%;
         font-weight: 700;
