--- a/src/templates/joomladach2023/assets/scss/components/_mainnav.scss
+++ b/src/templates/joomladach2023/assets/scss/components/_mainnav.scss
@@ -102,7 +102,7 @@
               > a {
                 color: #fff;
                 transition: .25s ease-in-out;
-                padding: var(--space-base);
+                padding: var(--space-smaller) var(--space-base);
                 text-decoration: none;
                 font-weight: 600;
                 display: block;
