--- a/src/templates/joomladach2023/assets/scss/components/_mainnav.scss
+++ b/src/templates/joomladach2023/assets/scss/components/_mainnav.scss
@@ -64,12 +64,12 @@
             left: 0;
             top: calc(100% + var(--space-xlarge));
             min-width: 250px;
-            padding: 0;
             margin: 0;
             border-radius: 8px;
             transition: .3s ease-in-out;
             opacity: 0;
             pointer-events: none;
+            padding: var(--space-small);
             &:before {
               height: var(--space-xlarge);
               width: 100%;
