--- a/src/templates/joomladach2023/assets/scss/components/_mainnav.scss
+++ b/src/templates/joomladach2023/assets/scss/components/_mainnav.scss
@@ -47,6 +47,7 @@
             }
           }
           &:hover,
+          &:focus-within,
           &:focus {
             > ul {
               opacity: 1;
