fix scss include

--- a/src/templates/joomladach2023/assets/scss/screen.scss
+++ b/src/templates/joomladach2023/assets/scss/screen.scss
@@ -24,6 +24,7 @@
 @import 'components/jdachhero';
 @import 'components/tabs';
 @import 'components/imagetext';
+@import 'components/mod-articles-advent';
 @import 'components/mod-articles-latest-alternate';
 @import 'components/mod-articles-latest-columns';
 @import 'components/testimonial';
