add styles for figure image in articles

--- a/src/templates/joomladach2023/assets/scss/screen.scss
+++ b/src/templates/joomladach2023/assets/scss/screen.scss
@@ -32,6 +32,7 @@
 @import 'components/downloadlink';
 @import 'components/tags';
 @import 'components/article-info';
+@import 'components/figure';
 
 @import 'views/com-content-article';
 @import 'views/com-content-category-blog';
